# all-projects

./: .gitignore  build.gradle.kts
appraisal-app/: README.md  build.gradle  settings.gradle
bill-tracker-api/: build.sbt
bill-trackers-api/: README.adoc  build.gradle.kts  settings.gradle.kts
bills-tracker-api/: README.md  build.gradle  settings.gradle
blnk/: docker-compose.yaml
blnk-client/: Cargo.toml
bookstore/: .env  Cargo.toml  Rocket.toml
bookstore/src/: main.rs
bookstore/src/controllers/: auth.rs  authors.rs  books.rs  mod.rs
bookstore/src/entities/: author.rs  book.rs  user.rs
bookstore/src/migrator/: m20220101_000001_create_user_table.rs  m20240221_141134_create_author_table.rs  m20240221_144340_create_book_table.rs  mod.rs
capegemini/: build.sbt
coding-test-for-thm068/: .gitignore  README.md  settings.gradle
customer-app/: build.sbt
datafx/: Cargo.toml  Export.csv  output.csv  test.csv
demo/: build.gradle  micronaut-cli.yml
demo-api-gateway/: build.gradle.kts  settings.gradle.kts
depop/: README.md  build.gradle.kts  micronaut-cli.yml  settings.gradle.kts
diary-app/: Filters.scala  build.sbt  fly.toml
eviden/: build.sbt
fauna-data/: README.md  pubspec.yaml
gkeepass/: build.gradle  settings.gradle
go-learning/: Main.go
halifax-docs/: Cargo.toml  Shuttle.toml  db.txt  tailwind.config.js
halifax-docs/.cargo/: config.toml
halifax-docs/src/: main.rs
halifax-docs/src/controller/: home.rs  members.rs  minutes.rs  mod.rs  user_management.rs
halifax-docs/src/entities/: member.rs  mod.rs  prelude.rs  role.rs  role_user.rs  user.rs
halifax-docs/src/migrator/: m20241013_045537_user.rs  m20241016_212301_role.rs  m20241017_222418_role_user.rs  m20241025_160543_member.rs  mod.rs
halifax-docs/src/model/: user.rs
halifax-docs/src/repository/: member_repository.rs  mod.rs  role_repository.rs  user_repository.rs
halifax-docs/static/css/: inter.css  tailwind.css
halifax-docs/templates/: base.html.hbs  church_members.html.hbs  church_minutes.html.hbs  index.html.hbs  login.html.hbs  register_success.html.hbs  register_user.html.hbs
halifax-docs/templates/layouts/: base.html.hbs  main.html.hbs
help/: .env  .env.test  README.md  docker-compose.yml
home-docs/: Cargo.toml  migration.txt  package-lock.json  tailwind.config.js
home-docs/src/: main.rs
home-docs/src/agent/: mod.rs
home-docs/static/css/: tailwind.css
home-docs/templates/: base.html  index.html
homework-for-life/: build.sbt
homework-life/: build.sbt
horticulture-helper/: Cargo.toml
horticulture-helper/src/: main.rs  router.rs  routes.rs  templates.rs
horticulture-helper/src/agent/: agent.rs
horticulture-helper/templates/: chat.html
kafker-faker-producer/: README.md  build.gradle.kts  micronaut-cli.yml  settings.gradle.kts
kigali-city/: .gitignore  settings.gradle
lean-s3-zio/: .gitignore  build.sbt
learn-groovy/: Main.groovy  newunique.groovy  unique_profiles.groovy
learn-rust/: main  main.rs
learn-rust/aws-s3-demo/: Cargo.toml
learn-rust/aws-s3-demo/src/: main.rs
learn-rust/ccwc/: Cargo.toml  some-file.txt
learn-rust/ccwc/src/: main.rs
learn-rust/replay-create-profile/: Cargo.toml
learn-rust/replay-create-profile/src/: main.rs
learn-rust/rust-goodness/: Cargo.toml  ServerTasks-631047.log.txt
learn-rust/rust-goodness/src/: basket.rs  closures.rs  collections.rs  design_patterns.rs  extension_trait.rs  generics.rs  idioms.rs  iterators.rs  logs_errors.rs  main.rs  request_test.rs  serde_lesson.rs  smart_pointers.rs  traits.rs
learn-rust/url-shortner-app/: Cargo.toml
learn-rust/url-shortner-app/src/: main.rs
learn-rust/url-shortner-app/src/controllers/: UrlShortener.rs  mod.rs
learn-rust/url-shortner-app/templates/: index.html.hbs
learn-rust/url-shortner-app/test/: quick_dev.rs
learn-rust/with-axum-htmx-askama/: Cargo.toml  package-lock.json  tailwind.config.js
learn-rust/with-axum-htmx-askama/src/: main.rs
learn-rust/with-axum-htmx-askama/src/controllers/: index_controller.rs  mod.rs  url_shortner.rs
learn-rust/with-axum-htmx-askama/src/model/: mod.rs
learn-rust/with-axum-htmx-askama/static/css/: tailwind.css
learn-rust/with-axum-htmx-askama/templates/: base.html  hello.html
learn-rust/with-axum-htmx-askama/templates/url-shortener/: index.html
learn-rust/zero-2-prod/: Cargo.toml
learn-rust/zero-2-prod/src/: main.rs
learn-rust/zero-2-prod/src/controllers/: healthcheck.rs  mod.rs  subscriptions.rs
learn-rust/zero-2-prod/src/models/: mod.rs
learn-rust/zero-2-prod/src/views/: mod.rs
learn-sc-3/: build.sbt
learn-scala-effects/: build.sbt
learning-zio/: build.sbt
livi-kry-service-pooler/: build.gradle
managemybills/: pom.xml
master-groovy/: settings.gradle
master-springboot/: build.gradle
mercator/: build.sbt
mfa-event/: README.md  build.gradle  micronaut-cli.yml  settings.gradle
month-bills-app/: README.adoc  build.gradle.kts  settings.gradle.kts
mr-vertx/: build.gradle.kts
newsletter/: Cargo.toml  package-lock.json  tailwind.config.js
note-book/: .gitignore  Cargo.toml
notes/: README.md  package-lock.json  tailwind.config.js
notes/web/: Cargo.toml  README.md
notes/web/src/: lib.rs  main.rs  routes.rs  state.rs
notes/web/src/controllers/: greeting.rs  home.rs  mod.rs  view.rs
notes/web/src/entities/: city.rs  country.rs  countrylanguage.rs  microstream.rs  microstream_channel_0.rs  mod.rs  prelude.rs
notes/web/src/test_helpers/: mod.rs
notes/web/templates/: index.html
notes/web/tests/api/: greeting_test.rs  main.rs
page-translator/: build.gradle.kts  settings.gradle.kts
petshop/: build.sbt
product_searcher/: Filereader.go  Filereader_test.go  ProductSearcher.go  ProductTextParser.go  ProductTextParser_test.go  main.go  products.go
sakila-api/: build.sbt
sf-102-kafka-building-blocks/: docker-compose.yaml
test/: settings.gradle.kts
ticket-searcher/: go.mod  hello_test.go  main.go
trello/: build.gradle.kts
vertx-event-bus/: pubspec.yaml
vertx_event_bus/: pubspec.yaml
vrm-app/: build.sbt
vueWorld/: index.html  main.js
(+579 files in other folders)
