[package]
name = "halifax-church"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0", features = ["secrets"] }
rocket_dyn_templates = { version = "0.1.0", features = ["handlebars"] }
shuttle-rocket = "0.48.0"
shuttle-runtime = "0.48.0"
shuttle-shared-db = { version = "0.48.0", features = ["postgres",  "sqlx"] }

tokio = "1.40.0"

sea-orm = { version = "1.1.0-rc.3", features = [ "sqlx-postgres", "runtime-async-std-native-tls", "macros" ] }
sqlx = "0.8.2"
sea-orm-migration = "1.1.0-rc.3"
serde = { version = "1.0.210", features = ["derive"] }
chrono = "0.4.38"
bcrypt = "0.15.1"
log = "0.4.22"
rdkafka = "0.36.2"
jsonwebtoken = "8.3.0"
dotenvy = "0.15.6"
time = "0.3.36"
