[package]
name = "home-docs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
shuttle-axum = "0.46.0"
shuttle-runtime = "0.46.0"
tokio = { version = "1.38", features = ["full"] }
askama = "0.12.1"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs"] }
anyhow = "1.0.86"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.68" }
async-openai = "0.25.0"
youtube-captions = "0.1.0"
reqwest = "0.11"
