[package]
name = "horticulture-helper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
async-openai = "0.27.2"
axum = "0.7.4"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.138"
shuttle-axum = { version = "0.51.0", default-features = false, features = ["axum-0-7"] }
shuttle-runtime = "0.51.0"
shuttle-shared-db = { version = "0.51.0", features = ["postgres", "sqlx"] }
sqlx = "0.8.2"
tokio = "1.28.2"
tokio-stream = { version = "0.1.14", features = ["sync"] }
uuid = { version = "1.12.1", features = ["v4"] }
