[package]
name = "aws-s3-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive", "cargo"] }
tokio = {version = "1.35.1", features = ["full"]}
tokio-stream = "0.1.14"
mime_guess = "2.0.4"

aws-config = { version = "1.1.2", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.12.0"
anyhow = "1.0.79"
