[package]
name = "ccwc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
anyhow = "1.0.79"
log = "0.4.20"
env_logger = { version = "0.10.1", features = [] }
chrono = "0.4.31"