[package]
name = "replay-create-profile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
aws-config = { version = "1.1.2", features = ["behavior-version-latest"] }
reqwest = { version = "0.11.23", features = ["json"] }
clap = { version = "4.4.11", features = ["derive"] }
anyhow = "1.0.79"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.113" }
