[package]
name = "rust-goodness"
version = "0.1.0"
edition = "2021"

[dependencies]
num-traits = "0.2.19"
reqwest =  { version = "0.12.7", features = ["default", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
serde_json = "1.0.128"
futures = "0.3.30"
colored = "2.1.0"
rdkafka = "0.36.2"
chrono = { version = "0.4.38", features = ["default"] }
